# ghostbuster

./: .env_sample  .gitignore  CLAUDE.md  analyse_txt_folder.py  fix_empty_generations.py  generate.py  main.py  pyproject.toml  requirements.txt
utils/: env_utils.py  generate.py  prompt_utils.py  write_logprobs.py
