[project]
name = "ghostbuster"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "anthropic>=0.40.0",
    "datasets>=5.0.0",
    "dill>=0.4.1",
    "dotenv>=0.9.9",
    "flask>=3.1.3",
    "matplotlib>=3.11.0",
    "nltk>=3.9.4",
    "numpy>=2.5.0",
    "openai>=2.44.0",
    "scikit-learn>=1.9.0",
    "tabulate>=0.10.0",
    "tenacity>=9.1.4",
    "tiktoken>=0.13.0",
    "torch>=2.12.1",
    "tqdm>=4.68.3",
    "transformers>=5.12.1",
]
